<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SignUpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="285dp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/t_n_ng_nh_p"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/comfirmPassword"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/x_c_nh_n_m_t_kh_u"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/m_t_kh_u"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/circular_std"
        android:text="@string/ng_k"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button_background"
        android:enabled="false"
        android:text="@string/ng_k"
        android:textAllCaps="false"
        android:textColor="@color/transWhite"
        android:textSize="19sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/comfirmPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/comfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/comfirmPassword"
        app:layout_constraintVertical_bias="0.801" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/b_n_c_t_i_kho_n"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_nh_p"
            android:textColor="@color/enColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/signUpProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/enColor"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/comfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/comfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/comfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>