<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ResetPasswordFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="345dp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="62dp"
        android:layout_marginTop="312dp"
        android:fontFamily="@font/circular_std"
        android:text="@string/qu_n_m_t_kh_u"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <EditText
        android:id="@+id/email"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/hintColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="356dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:lineHeight="35dp"
        android:text="@string/b_n_h_y_nh_p_email_i_l_i_m_t_kh_u"
        android:textColor="@color/enColor"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_editor_absoluteX="36dp"
        app:layout_editor_absoluteY="489dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quay_l_i"
            android:textColor="@color/enColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/gradient_background"
        android:text="Đổi Mật Khẩu"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/transWhite"
        android:textSize="19sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordProgressBar"
        app:layout_constraintVertical_bias="0.985" />

    <TextView
        android:id="@+id/responseMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="TextView"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ProgressBar
        android:id="@+id/resetPasswordProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:backgroundTint="@color/enColor"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/resetPasswordButton"
        app:layout_constraintEnd_toEndOf="@+id/responseMessage"
        app:layout_constraintStart_toStartOf="@+id/responseMessage"
        app:layout_constraintTop_toBottomOf=" @id/responseMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>